Anasayfa Ekranı Tasarlandı.ProfilPage yapım aşamasında

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -193,6 +193,7 @@
                                     android:id="@+id/profileButon"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
+                                    android:onClick="profilPage"
                                     android:background="@android:color/transparent" />
 
                                 <ImageView
