--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,74 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkSlateGray"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="18dp"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="0dp">
-
-    <EditText
-        android:id="@+id/input_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext3"
-        android:drawableRight="@drawable/keyhole"
-        android:hint="Kullanıcı Adı"
-        android:paddingRight="5dp"
-        android:lines="2"
-        android:paddingLeft="5dp"
-        android:textColor="#000"
-        android:textColorHint="#333"
-        android:textStyle="italic" />
-
-    <!--android:inputType="textEmailAddress"-->
-
-    <!--  Password Label -->
-    <EditText
-        android:id="@+id/input_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/edittext3"
-        android:drawableRight="@drawable/padlock"
-        android:hint="Parola"
-        android:inputType="textPassword"
-        android:lines="2"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:textColor="#000"
-        android:textColorHint="#333"
-        android:textStyle="italic" />
-
-    <!-- android:inputType="textPassword" -->
+    tools:context="com.example.harun.getjob.MainActivity">
 
 
     <Button
-        android:id="@+id/btn_login"
-        android:layout_width="175dp"
+        android:id="@+id/log_out_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/edittext3"
-        android:drawableRight="@drawable/ic_action_name"
-        android:text="Giriş Yap"
-        android:textColor="@color/SeaGreen"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/link_signup"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="Hesabın Yok mu? Yeni Bir Hesap Oluştur"
-        android:textColor="@color/White"
-        android:textSize="16dip" />
-
-
-</LinearLayout>
+        android:text="Log Out"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="2dp" />
+</android.support.constraint.ConstraintLayout>
