--- a/app/src/main/res/drawable/roundedbutton2.xml
+++ b/app/src/main/res/drawable/roundedbutton2.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:shape="rectangle">
-    <solid android:color="#80000000" />
+    <solid android:color="@color/white"
+
+        />
+
 
 </shape>
