--- a/app/src/main/res/drawable/textview_back.xml
+++ b/app/src/main/res/drawable/textview_back.xml
@@ -11,7 +11,7 @@
     <stroke
         android:width="1dp"
 
-        android:color="@color/DarkSlateGray2" >
+        android:color="@color/white" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
