--- a/app/src/main/res/drawable/roundedbutton2.xml
+++ b/app/src/main/res/drawable/roundedbutton2.xml
@@ -3,8 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:shape="rectangle">
-    <solid android:color="@color/white"
-
+    <solid android:color="@color/white"> </solid>
+    <corners
+        android:bottomLeftRadius="8dp"
+        android:bottomRightRadius="8dp"
+        android:topLeftRadius="8dp"
+        android:topRightRadius="8dp"
         />
 
 
