--- a/app/src/main/res/layout/edit_about.xml
+++ b/app/src/main/res/layout/edit_about.xml
@@ -1,12 +1,16 @@
-<merge
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!--D Ü Z E N L E N E C E K  -->
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/edittext_back"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
@@ -29,26 +33,58 @@
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:text="HAKKIMDA"
+                android:layout_centerHorizontal="true"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="20sp"
                 android:textStyle="bold|italic" />
         </RelativeLayout>
 
-
-        <EditText
-            android:id="@+id/about_content"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:lineSpacingExtra="4dp"
-            android:text="Kısaca Kendinizden Bahsediniz "
-            android:textColor="#8c8c8c"
-            android:textSize="14sp" />
+            app:counterEnabled="true"
+            app:counterMaxLength="300"
+            app:counterOverflowTextAppearance="@color/colorAccent">
 
 
+            <EditText
+                android:id="@+id/about_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+
+                android:hint="Kısaca Kendinizden Bahsediniz "
+                android:inputType="textMultiLine"
+                android:textColor="@color/primary_dark"
+                android:textSize="18sp"
+                android:theme="@style/FullWidthEditText" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/aboutSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="Kaydet"
+                android:theme="@style/ButtonStyle" />
+
+            <Button
+                android:id="@+id/aboutCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="İptal Et"
+                android:theme="@style/ButtonStyle" />
+
+        </RelativeLayout>
     </LinearLayout>
 
-</merge>
+</RelativeLayout>
