--- a/app/src/main/res/layout/edit_deneyim.xml
+++ b/app/src/main/res/layout/edit_deneyim.xml
@@ -1,97 +1,126 @@
-<merge
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
->
-<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:src="@android:drawable/ic_menu_add"
-            android:tint="@color/black" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:text="Deneyimlerim"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="20sp"
-            android:textStyle="bold|italic" />
-    </RelativeLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/burasıEklenecek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="15dp"
+                android:tint="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="12dp"
+                android:text="Deneyim Ekle "
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="20sp"
+                android:textStyle="bold|italic" />
+        </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/burasıEklenecek"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <EditText
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_back"
-                android:hint="Pozisyon"
-                android:padding="5dp" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
-            <EditText
+                <EditText
+                    android:id="@+id/deneyimPozisyon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_back"
+                    android:hint="Pozisyon"
+                    android:padding="5dp" />
+
+                <EditText
+                    android:id="@+id/deneyimAy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_back"
+                    android:hint="Kac Ay Çalıştınız"
+                    android:padding="5dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_back"
-                android:hint="Kac Ay Çalıştınız"
-                android:padding="5dp" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
+                <EditText
+                    android:id="@+id/deneyimKurum"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_back"
+                    android:hint="Kurum Adı "
+                    android:padding="5dp" />
+
+                <EditText
+                    android:id="@+id/deneyimLokasyon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_back"
+                    android:hint="Lokasyon Bilgisi"
+                    android:padding="5dp" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
-            <EditText
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/expSave"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_back"
-                android:hint="Kurum Adı "
-                android:padding="5dp" />
+                android:layout_alignParentEnd="true"
+                android:text="Kaydet"
+                android:theme="@style/ButtonStyle" />
 
-            <EditText
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/expCancel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_back"
-                android:hint="Lokasyon Bilgisi"
-                android:padding="5dp" />
+                android:layout_alignParentStart="true"
+                android:text="İptal Et"
+                android:theme="@style/ButtonStyle" />
 
-        </LinearLayout>
+        </RelativeLayout>
+
     </LinearLayout>
-</LinearLayout>
 
-</merge>
+</RelativeLayout>
