--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/SkyBlue</item>
+        <item name="colorControlActivated">@color/Tomato</item>
+    </style>
+    <style name="FullWidthEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:padding">20dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:textSize">@dimen/abc_text_size_subhead_material</item>
+    </style>
+
+
     <style name="RatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/OrangeRed</item>
         <item name="colorControlActivated">@color/SeaGreen</item>
