--- a/app/src/main/res/layout/deneyimlist_row.xml
+++ b/app/src/main/res/layout/deneyimlist_row.xml
@@ -3,10 +3,12 @@
     android:id="@+id/eklenecekDeneyimList"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="8dp"
     android:background="@drawable/roundedbutton2"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="6dp"
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/ayText"
@@ -21,10 +23,11 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="20dp"
-        android:layout_height="80dp"
+        android:layout_width="10dp"
+        android:layout_height="70dp"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/ayText"
+        android:backgroundTint="@color/green"
         android:background="@drawable/line"
 
         />
@@ -43,10 +46,10 @@
                 android:id="@+id/tvPozisyon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginLeft="20dp"
                 android:text="Android Developer"
-                android:textAlignment="center"
-                android:textSize="15dp" />
+                android:textAlignment="center" />
 
             <ImageView
                 android:layout_width="20dp"
@@ -57,48 +60,29 @@
                 />
 
         </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/tvKurum"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_toEndOf="@+id/view"
-                android:layout_weight="0.7"
+                android:layout_marginStart="20dp"
                 android:text="OptiiM"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_weight="0.3"
-                android:background="@drawable/sort">
-
-            </View>
 
             <TextView
                 android:id="@+id/tvLokasyon"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="0.7"
+                android:layout_marginStart="20dp"
+
                 android:text="İstanbul"
-                android:textAlignment="viewEnd"
                 android:textSize="13dp"
                 android:textStyle="italic" />
 
 
         </LinearLayout>
 
-
-    </LinearLayout>
 
 
 </RelativeLayout>
