--- a/app/src/main/res/layout/edit_about.xml
+++ b/app/src/main/res/layout/edit_about.xml
@@ -20,12 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="24dp"
+            <Button
+                android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:id="@+id/aboutCancel"
                 android:layout_alignParentRight="true"
+                android:layout_marginEnd="15dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/compose"
+                android:background="@drawable/ic_close_black_24dp"
                 android:tint="@color/black" />
 
             <TextView
@@ -76,13 +78,6 @@
                 android:text="Kaydet"
                 android:theme="@style/ButtonStyle" />
 
-            <Button
-                android:id="@+id/aboutCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="İptal Et"
-                android:theme="@style/ButtonStyle" />
 
         </RelativeLayout>
     </LinearLayout>
