--- a/app/src/main/res/layout/edit_deneyim.xml
+++ b/app/src/main/res/layout/edit_deneyim.xml
@@ -14,14 +14,17 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:background="@drawable/white_grey_border_bottom"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="24dp"
+            <Button
+                android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:id="@+id/expCancel"
+                android:background="@drawable/ic_close_black_24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:tint="@color/black" />
 
             <TextView
@@ -39,13 +42,9 @@
             android:id="@+id/burasıEklenecek"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/deneyimPozisyon"
@@ -67,12 +66,9 @@
                     android:hint="Kac Ay Çalıştınız"
                     android:padding="5dp" />
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+
+
 
                 <EditText
                     android:id="@+id/deneyimKurum"
@@ -94,13 +90,13 @@
                     android:hint="Lokasyon Bilgisi"
                     android:padding="5dp" />
 
-            </LinearLayout>
         </LinearLayout>
 
 
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
             android:layout_height="wrap_content">
 
             <Button
@@ -109,14 +105,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="Kaydet"
-                android:theme="@style/ButtonStyle" />
-
-            <Button
-                android:id="@+id/expCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="İptal Et"
                 android:theme="@style/ButtonStyle" />
 
         </RelativeLayout>
