--- a/app/src/main/res/layout/edit_egitim.xml
+++ b/app/src/main/res/layout/edit_egitim.xml
@@ -1,130 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@drawable/white_grey_border_bottom">
+
+        <Button
+            android:id="@+id/egitimCancel"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/ic_close_black_24dp"
+            android:tint="@color/black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:padding="12dp"
+            android:text="Eğitim Bilgileri"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/eklenecekEgitim"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="5dp"
-                android:src="@drawable/add"
-                android:tint="@color/black" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="Eğitim Bilgileri"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="20sp"
-                android:textStyle="bold|italic" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/eklenecekEgitim"
+        <EditText
+            android:id="@+id/egitimOkul"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edittext_back"
+            android:hint="Okul"
+            android:lineSpacingExtra="4dp"
+            android:lines="2"
+            android:paddingLeft="7dp"
+            android:textColor="#8c8c8c"
+            android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/about_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_back"
-                android:lineSpacingExtra="4dp"
-                android:lines="2"
-                android:paddingLeft="7dp"
-                android:text="Okul"
-                android:textColor="#8c8c8c"
-                android:textSize="14sp" />
+        <EditText
+            android:id="@+id/egitimBolum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edittext_back"
+            android:hint="Bölüm"
+            android:lineSpacingExtra="4dp"
+            android:lines="2"
+            android:paddingLeft="7dp"
+            android:textColor="#8c8c8c"
+            android:textSize="14sp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_back"
-                android:lineSpacingExtra="4dp"
-                android:lines="2"
-                android:paddingLeft="7dp"
-                android:text="Bölüm"
-                android:textColor="#8c8c8c"
-                android:textSize="14sp" />
+        <EditText
+            android:id="@+id/egitimlisans"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edittext_back"
+            android:hint="Öğrenim Türü Yüksek Lisans"
+            android:lineSpacingExtra="4dp"
+            android:lines="2"
+            android:paddingLeft="7dp"
+            android:textColor="#8c8c8c"
+            android:textSize="14sp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_back"
-                android:lineSpacingExtra="4dp"
-                android:lines="2"
-                android:paddingLeft="7dp"
-                android:text="Öğrenim Türü Yüksek Lisans"
-                android:textColor="#8c8c8c"
-                android:textSize="14sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
+                android:text="Baslangıc Yılı"
+                android:textAlignment="center"
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:listheader="Baslangıc Yılı"
-                    android:spinnerMode="dropdown"
-                    android:prompt="@string/spinnerPrompt"
-                    android:scrollbars="horizontal"
-                    android:layout_weight="1">
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Bitis Yılı"
+                android:textAlignment="center"
+
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/bs_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:prompt="@string/spinnerPrompt"
+                android:scrollbars="horizontal"
+                android:spinnerMode="dropdown"
+                android:textAlignment="center">
 
 
-                </Spinner>
+            </Spinner>
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:listheader="Bitis Yılı"
-                   android:spinnerMode="dropdown"
-                    android:prompt="@string/spinnerPrompt2"
-                    android:scrollbars="horizontal"
-                    android:layout_weight="1">
+            <Spinner
+                android:id="@+id/bts_spinner"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:prompt="@string/spinnerPrompt2"
+                android:scrollbars="horizontal"
+                android:spinnerMode="dropdown"
+
+                android:textAlignment="center">
 
 
-                </Spinner>
-
-            </LinearLayout>
-
+            </Spinner>
 
         </LinearLayout>
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <Button
+                android:id="@+id/egitimSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="Kaydet"
+                android:theme="@style/ButtonStyle" />
+
+        </RelativeLayout>
+
+
     </LinearLayout>
 
-</merge>
+
+</LinearLayout>
+
